WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301982
REGRESSION (
298476@main
): [AX] Crash under WebCore::Editor::respondToChangedContents when VoiceOver is enabled
https://bugs.webkit.org/show_bug.cgi?id=301982
Summary
REGRESSION (298476@main): [AX] Crash under WebCore::Editor::respondToChangedC...
Wenson Hsieh
Reported
2025-11-04 19:38:07 PST
rdar://163230929
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-11-04 19:42:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53435
EWS
Comment 2
2025-11-05 03:01:45 PST
Committed
302581@main
(8bc3a0eefb4f): <
https://commits.webkit.org/302581@main
> Reviewed commits have been landed. Closing PR #53435 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug